# hva-alice-bootcamp

./: .travis.yml  README.md  build.sh  package-lock.json
cpp/: CMakeLists.txt
cpp/CMakeModules/: FindZookeeper.cmake
cpp/examplebin/: CMakeLists.txt
cpp/examplebin/src/: Main.cxx
cpp/examplelib/: CMakeLists.txt
cpp/examplelib/include/: Foo.h
cpp/examplelib/src/: Foo.cxx
cpp/lib/: CMakeLists.txt
cpp/lib/include/: Foo.h
cpp/tests/: CMakeLists.txt  TestLib.cxx  testFoo.cxx
mithril-site/: index.html  manifest.webmanifest  package-lock.json  package.json
mithril-site/src/scss/: main.scss  sidebar.scss
mithril-site/src/ts/: index.ts
mithril-site/src/ts/models/: Message.ts  User.ts
mithril-site/src/ts/views/: MainWindow.ts
rest-api/: README.md  build.sh  ormconfig.json  package-lock.json  package.json
rest-api/src/: main.ts
rest-api/src/app/: app.controller.ts  app.module.ts  app.service.ts
rest-api/src/messages/: message.entity.ts  messages.controller.ts  messages.module.ts  messages.service.ts
rest-api/src/messages/dto/: create-message.dto.ts  update-message.dto.ts  vote-message.dto.ts
rest-api/src/messages/interfaces/: message.interface.ts
rest-api/src/users/: user.entity.ts  user.repository.ts  users.controller.ts  users.service.ts
rest-api/src/users/dto/: create-user.dto.ts  update-user.dto.ts
rest-api/src/users/interfaces/: user.interface.ts
tslib/: package.json
